CHANGELOG for the CCEAP tool

current : today
 * performed additional improvements within documentation and Makefile

v. 0.5.0 : 2016-10-18
 * added support for the Inter-arrival Time Pattern (and with that also an
   (indirect) support for the Rate/Throughput Pattern
 * aligned port used in Makefile with port used in docs
 * improved formating issues for PDF documentation and introduced
   several detail updates within the documentation

v. 0.4.1 : 2016-07-26
 * Initial release
